# confluent-sql

./: .gitignore  ARCHITECTURE.md  BRANCH_MISSION.md  CHANGELOG.md  CHANGELOG_MODULE_RENAME.md  CLAUDE.md  CLAUDE_SKILLS.md  DBAPI_EXTENSIONS.md  LICENSE.txt  MORE_AGGRESSIVE_MEMORY_FREEING.md  Makefile  README.md  ROW_DICT_SIMPLIFICATION.md  SETUP.md  STREAMING.md  TODO.md  TYPES.md  changelog_compressor_plan.md  mm_patch  pr-123-connector-lifecycle-actions.md  pyproject.toml  pytest.ini  service.yml  users-first-letter-group-query.flink.sql
.claude/: SKILLS.md
.claude/skills/: README.md
.claude/skills/review/: PROMPT.md  README.md  review.sh
.claude/skills/test/: PROMPT.md  README.md
.github/: CODEOWNERS
.semaphore/: publish_to_codeartifact.yml  publish_to_pypi.yml  semaphore.yml
examples/: README.md  _connection.py  byoidc_bearer_token_example.py  errors.py  sdk.py  simple.py  simple_append_only_streaming_query_example.py  snapshot_mode_tuple_cursor_simple_example.py  utils.py
examples/jupyter/: flink_exploration.ipynb
examples/langchain/: flink_sql_agent.py
examples/pandas/: read_flink_table.py  streaming_to_dataframe.py
examples/polars/: read_flink_table.py
examples/streamlit/: flink_dashboard.py
src/confluent_sql/: __init__.py  __version__.py  auth.py  changelog.py  changelog_compressor.py  connection.py  connectors.py  cursor.py  exceptions.py  execution_mode.py  polling.py  result_readers.py  retry.py  statement.py  statement_properties.py  tableflow.py  types.py
tests/: __init__.py  conftest.py  test_connection.py  test_fetch.py  test_streaming.py
tests/integration/: conftest.py  test_connection.py  test_connector.py  test_cursor.py  test_fetch.py  test_streaming.py  test_tableflow.py
tests/unit/: conftest.py  test_auth_unit.py  test_changelog_compressor_unit.py  test_changelog_unit.py  test_connection_byoidc_unit.py  test_connection_connector_unit.py  test_connection_unit.py  test_connection_unit_properties.py  test_connectors_connection_unit.py  test_connectors_unit.py  test_cursor_unit.py  test_execution_mode_unit.py  test_mock_connection.py  test_polling_unit.py  test_result_readers_unit.py  test_retry_unit.py  test_statement_properties_unit.py  test_statement_unit.py  test_tableflow_connection_unit.py  test_tableflow_unit.py  test_types_unit.py  test_unit_cursor.py
