[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confluent-sql"
version = "0.1.0"
description = "DB-API v2 compliant driver for Confluent SQL"
requires-python = ">=3.9"
dependencies = ["httpx>=0.23.0,<0.29.0"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=confluent_sql",
    "--cov-report=html",
]
testpaths = "tests"
markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
    "slow: mark a test as a slow (longer than a few seconds integration) test",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.3",
]
