[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confluent-sql"
version = "0.1.1"
description = "DB-API v2 compliant driver for Confluent SQL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.23.0,<0.29.0"]
platforms = ["any"]
maintainers = [{ name = "Confluent", email = "support@confluent.io" }]
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/confluentinc/confluent-sql"
Documentation = "https://github.com/confluentinc/confluent-sql?tab=readme-ov-file#confluent-sql"
"Bug Tracker" = "https://github.com/confluentinc/confluent-sql/issues"

[tool.ruff]
line-length = 100
lint.ignore = [
    "PLR2004", # stop complaining about inlined constants, mostly in test cases
]
lint.exclude = ["build/", "dist/", ".venv/"]
lint.select = [
    "UP",
    "PL",
    "E",
    "F",
    "B",
    "SIM",
    "I",
    "D300", # docstring conventions
]

[tool.ruff.format]
# Enable Ruff to format code blocks in docstrings.
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint.pylint]
max-args = 10

[tool.pyright]
verboseOutput = true
pythonVersion = "3.10"
pythonPlatform = "All"
include = ["src", "tests", "examples"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=confluent_sql",
    "--cov-report=html",
]
testpaths = "tests"
markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
    "slow: mark a test as a slow (longer than a few seconds integration) test",
    "typeconv: mark a test as a type conversion test",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.0.0",
    "ruff>=0.14.3",
]
